<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spider2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Button_name">Click Me!!</string>
    <string name="CheckBox_name">Bold</string>
    <string name="CheckBox2_name">Italics</string>
    <string name="CheckBox3_name">Underline</string>
    <string name="TextView1">Some Text : </string>
    <string name="font_size">Font Size :</string>
    <string name="color_name">Color :</string>
    <string name="font_name">Font : </string>

</resources>
